# alfred-cli

./: .env.example  .gitignore  ALFRED_PLAN.md  CLAUDE.md  MULTI_PROVIDER_INTEGRATION.md  Makefile  README.md  design.md  esbuild.config.js  eslint.config.js  main.py  mcp.json  mcp.json.example  package-lock.json  package.json  pyproject.toml  test_app.py  test_cleanup.py  test_run.py  test_simple.py  test_ui.py
.ai/docs/: api_analysis.md  data_flow_analysis.md  request_flow_analysis.md  structure_analysis.md
.ai/knowledge/: dependency_analysis.md
.ai/metaprompts/: bug.md  chore.md  feature.md
.ai/playbooks/: create-tools.md  (+4 more)
alfred/: __init__.py  agent.py  config.py  context.py
docs/: architecture.md  checkpointing.md  deployment.md  extension-releasing.md  extension.md  gemini-ignore.md  getting-started-extensions.md  headless.md  ide-companion-spec.md  ide-integration.md  index.md  integration-tests.md  issue-and-pr-automation.md  keyboard-shortcuts.md  npm.md  quota-and-pricing.md  releases.md  sandbox.md  sidebar.json  telemetry.md  tos-privacy.md  troubleshooting.md  trusted-folders.md
examplecode/: README.md  claude.py  main.py  pyproject.toml
examplecode/src/cli/: __init__.py  spinner.py
examplecode/src/core/: __init__.py  agent.py  configuration.py  console_renderer.py  conversation.py  messages.py  tool_coordinator.py  tool_definition.py  tool_registry.py  tool_response.py
examplecode/src/schemas/: __init__.py  bash.py  edit_file.py  glob.py  grep.py  read_file.py  write_file.py
examplecode/src/tools/: __init__.py  base_tool.py  bash.py  edit.py  filesystem_tool.py  glob.py  grep.py  read.py  write.py
examplecode/src/utils/: path_utils.py  path_validator.py  response_builder.py
integration-tests/: globalSetup.ts  run_shell_command.test.ts  test-helper.ts
scripts/: build.js  build_sandbox.js  check-build-status.js  local_telemetry.js  sandbox_command.js  start.js  telemetry.js  telemetry_utils.js
tasks/: knowledge_build.md  refactor-additional.md  refactor.md  remove-base-provider.md  thinking-display-implementation.md
temp_scripts/: remove_ide_from_appcontainer.sh  remove_sandbox_refs.sh
(+35 files in other folders)
