[project]
name = "alfred-cli"
version = "0.1.0"
description = "Modular AI chat agent with rich terminal interface"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.30.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyperclip>=1.8.0",
]

[project.scripts]
alfred = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alfred"]
